Fix error message, style input

--- a/index.html
+++ b/index.html
@@ -82,13 +82,12 @@
 
     </div> <!-- end .weather-box -->
 
-    <div class="search-bar">
-    <form>
-        <input type="text" id="city-search" placeholder="Search for a city" autofocus>
-        <button type="submit">go→
-        </button>
-      </form>
-      <span class="msg"></span>
+    <div class="search__wrapper">
+        <form>
+            <input class="search__input" type="text" id="city-search" placeholder="Search for a city" autofocus>
+            <button type="submit">go→</button>
+        </form>
+        <span class="msg"></span>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
